<resources>
    <string name="app_name">WHIB</string>
    <string name="app_name_complete">What Happens In Brazil?</string>
    <string name="nao_postamos">Não postamos nada no Facebook</string>
    <string name="ao_entrar">Ao entrar, você concorda com nossos</string>
    <string name="termos"><u>termos de serviço</u></string>
    <string name="politica_de_privacidade">e <u>politica de privacidade</u></string>
    <string name="welcome">Bem Vindo</string>
    <string name="cancel_login">Operação cancelada</string>
    <string name="error_login">Falha na conexão</string>
    <string name="logout">Sair</string>
    <string name="firebase_error_login">Erro Firebase</string>
    <string name="facebook_app_id">419501825567313</string>
    <string name="fb_login_protocol_scheme">fb419501825567313</string>
    <string name="frase1"><u>Aprenda e seja ouvido sobre os assuntos mais debatidos do momento</u></string>
    <string name="frase2"><u>Quem disse que assuntos polêmicos não podem ser debatidos pacificamente?</u></string>
    <string name="frase3"><u>Procurava um lugar para dar sua opinião e ser ouvido sem intolerância?</u></string>
    <string name="slogan">Debates polêmicos com menos emoção, mais argumentos</string>
    <string name="not_extra_yet">Ops! Você ainda não é um assinante da versão extra.</string>
    <string name="get_extra">Assine a versão extra e tenha acesso a diversos recursos</string>
    <string name="extra_price">R$5,00 /mês</string>
    <string name="main_server">Servidor principal</string>
    <string name="secondary_server">Servidores secundários</string>
    <string name="main_subject">Assunto principal</string>
    <string name="subject">Assunto 1</string>
    <string name="tl_title">O que você pensa sobre…</string>
    <string name="leave_comment">Entre para o debate. Deixe seu comentário</string>
    <string name="comment_hint">Deixe aqui seu comentário…</string>
    <string name="group_full">Ops! Este grupo já está lotado!</string>
    <string name="joke_text">Não concordar com um usuário não é motivo para denunciá-lo!</string>
    <string name="reported">Você está sendo reportado no lugar!</string>
    <string name="reason">Motivo!</string>
    <string name="reason_explanation">O WHIB presa pela fácil identificação e reconhecimento entre os usuários e para isso é necessário que os mesmos possuam uma identidade bem definida!</string>
    <string name="disable_notifications">Desativar notificações!</string>
    <string name="disable_notifications_explanation">Ao desativar as notificações você não será informado dos novos debates!</string>
    <string name="delete_account">Você quer mesmo deletar sua conta?</string>
    <string name="delete_account_explanation">Ao deletar sua conta todos os seus registros serão perdidos!</string>
    <string name="wait_your_time">Espere sua vez…</string>
    <string name="exit_icon">Icone sair</string>
    <string name="right_arrow_icon">Icone seta direita</string>
    <string name="choose_next_subject">Escolha o próximo assunto</string>
    <string name="back_icon">Icone seta esquerda</string>
    <string name="sair">sair</string>
    <string name="signinas">Sign in as</string>
    <string name="activated">activated</string>
    <string name="server1">Servidor #1</string>
    <string name="store">Loja</string>
    <string name="settings">Configurações</string>
    <string name="about">Sobre</string>
    <string name="profile">Perfil</string>
    <string name="rate">Avaliar!</string>
    <string name="group">Grupo</string>
    <string name="free">Grátis</string>
    <string name="time">Tempo</string>
    <string name="audio">Áudio</string>
    <string name="cancel">CANCELAR</string>
    <string name="delete"><u>DELETAR</u></string>
    <string name="jump_time">Pular vez</string>
    <string name="whose_time">Vez de</string>
    <string name="support">Apoiar</string>
    <string name="report">Reportar</string>
    <string name="follow">Seguir</string>
    <string name="version">Versão %1$s</string>
    <string name="delete_account_text">Deletar conta!</string>
    <string name="title_activity_tabs_settings">tabs_settings</string>
    <string name="action_settings">Settings</string>
    <string name="adjustments">Ajustes</string>
    <string name="sound">Som</string>
    <string name="vibration">Vibração</string>
    <string name="notifications">Notificações</string>
    <string name="show_photo">Mostrar Foto</string>
    <string name="sign_whib_extra">Assinar WHIB extra</string>
    <string name="title_extra">Tenha acesso a diversos recursos exclusivos com o WHIB extra</string>
    <string name="preferences">Preferências</string>
    <string name="whib_extra">WHIB EXTRA</string>
    <string name="servers">Servidores</string>
    <string name="arroba">\@</string>
    <string name="rating">Média</string>
    <string name="valuations">Avaliação</string>
    <string name="reports">Reportes</string>
    <string name="sent">Feitas:</string>
    <string name="received">Recebidas:</string>
    <string name="about_us">Sobre nós</string>
    <string name="faq">FAQ</string>
    <string name="terms_and_privacy_policy">Termos de uso e Política de privacidade</string>
    <string name="contact_us">Fale conosco</string>
    <string name="something_wrong">Algo de errado? Dúvidas? nos conte!</string>
    <string name="use_terms">Termos de uso</string>
    <string name="privacy_policy">Política de privacidade</string>
    <string name="vision">Visão</string>
    <string name="mission">Missão</string>
    <string name="our_vision_is">Ser a rede social referência para os brasileiros em debates dos assuntos em alta</string>
    <string name="our_mission_is">Proporcionar um ambiente sadio para discussão dos assuntos mais comentados do momento e tornar o debate um hábito saudável entre os brasileiros.</string>
    <string name="history">Histórico</string>
    <string name="consult_faq">Sua dúvida pode já ter sido respondida consulte nosso FAQ</string>
    <string name="frequent_questions">Perguntas Frequentes</string>
    <string name="did_not_find_answer">Não encontrou respostas para suas dúvidas? Pergunte aqui!</string>
    <string name="tell_your_problem">Nos conte seu problema</string>
    <string name="send">Enviar</string>
    <string name="answer_soon">Em breve responderemos sua questão.</string>
    <string name="report_user">Denunciar Usuário</string>
    <string name="what_reason">Qual o motivo?</string>
    <string name="do_no_agree">Não concordo com o que foi dito</string>
    <string name="personal_attacks">O usuário se utiliza de ataques pessoais</string>
    <string name="bad_behave">Comportamento tóxico ou inadequado</string>
    <string name="tell_us_more">Conte-nos um pouco a respeito…</string>
    <string name="not_reason">Não concordar com um usuário não é motivo para denunciá-lo!</string>
    <string name="reverse_report">Você está sendo reportado no lugar!</string>
    <string name="other">Outro</string>
    <string name="report_sent">A sua denúncia foi enviada com sucesso!</string>
    <string name="cant_report_own_comment">Você não pode reportar seu próprio comentário!</string>
    <string name="select_a_reason">Selecione uma das razões anteriores!</string>
    <string name="make_first_comment">Seja o primeiro a comentar sobre este assunto!</string>
    <string name="reportReason">Motivo:</string>
    <string name="comment">Comentário:</string>
    <string name="reportExplanation">Explicação:</string>
    <string name="receiver">Alvo:</string>
    <string name="sender">Fonte:</string>
    <string name="fair_reports">Denúncias Justas:</string>
    <string name="fair">Justo</string>
    <string name="unfair">Injusto</string>
    <string name="no_reports">Não há nenhuma denúncia para ser avaliada!</string>
    <string name="no_charges_on_you">Você não recebeu nenhuma denúncia!</string>
    <string name="subscription_period_prompt">Select your subscription period</string>
    <string name="subscription_resignup_prompt">To reactivate your subscription, select your subscription period</string>
    <string name="subscription_update_prompt">To change your subscription, select your new subscription period</string>
    <string name="subscription_period_monthly">1 Mês R$5.99</string>
    <string name="subscription_period_sixmonth">6 Meses R$29.99</string>
    <string name="subscription_period_yearly">1 Ano R$45.99</string>
    <string name="subscription_prompt_continue">Continue</string>
    <string name="subscription_prompt_cancel">Cancel</string>
    <string name="get_whib_extra">Assine o WHIB Extra</string>
    <string name="monthly">1 \n mês</string>
    <string name="quarterly">3 \n meses</string>
    <string name="semiannual">6 \n meses</string>
    <string name="yearly">1 \n ano</string>
    <string name="sign">Assinar</string>
    <string name="next">Continuar</string>
    <string name="most_popular_plan">Plano mais popular</string>
    <string name="cancel_subscription_text">Sua assinatura será renovada automaticamente ao fim do período escolhido, porém você pode cancelar sua assinatura a qualquer momento.</string>
    <string name="turn_off_ads">Desligar Aúncios</string>
    <string name="do_not_see_ads">Não veja mais anúncios em nenhuma parte</string>
    <string name="help_to_choose">Ajude a escolher os próximos assuntos que serão debatidos no app</string>
    <string name="highlight_your_comments">Destaque seus comentários</string>
    <string name="get_your_comments_highlighted">Todos seus comentários destacados da maioria, chame a atenção e receba mais avaliações</string>
    <string name="get_in_full_servers">Entre em servidores lotados</string>
    <string name="get_in_full_servers_explanation">Entre nos servidores lotados e participe das melhores discussões</string>
    <string name="choose_subscription_time">Escolha o tempo da sua inscrição</string>
    <string name="become_exclusive">Torne-se exclusivo</string>
    <string name="enjoy_advantages">Desfrute das vantagens</string>
    <string name="no_thanks">Não, obrigado</string>
    <string name="total_price_yearly">Preço total: \n R$ 45,99</string>
    <string name="total_price_monthly">Preço total: \n R$ 29,99</string>
    <string name="already_reported_this_comment">Você já reportou este comentário!</string>
    <string name="answer">Resposta</string>
    <string name="soon">Em breve</string>
    <string name="no_complaints">Não há nenhuma questão para ser respondida</string>
    <string name="your_requests">Suas requisições</string>
    <string name="no_requests">Você não tem nenhuma requisição</string>
    <string name="skip_tutorial">Pular tutorial</string>
    <string name="close"><u>Fechar</u></string>
    <string name="next_step">Próximo</string>
    <string name="buy">Comprar</string>
    <string name="tips">Dicas</string>
    <string name="alone_from_here"><u>Prefiro seguir sozinho</u></string>
    <string name="keep_going">Continuar</string>
    <string name="note">Nota:</string>
    <string name="white_comments">- Comentários em branco são o padrão.</string>
    <string name="orange_comments">- Em laranja são comentários destacados dos usuários premium.</string>
    <string name="out_of_subject">O comentário não tem a ver com o tema</string>
    <string name="to_send_stickers_is_easy">Para enviar figurinhas é muito fácil: você só precisa apertar e segurar o texto do comentário que deseja e suas figurinhas irão aparecer</string>
    <string name="use_the_starts_to_valuate_a_comment">Utilize as estrelas para avaliar o comentário.</string>
    <string name="here_you_can_see_the_made_comments_on_this_subject">Aqui você pode ver os comentários que já foram feitos sobre este assunto.</string>
    <string name="cool_this_subject_is_interesting">Legal! Este é um assunto bem interessante</string>
    <string name="to_report_an_user_you_just_need">Para reportar um usuário basta clicar no ícone vermelho de denúncia abaixo da foto</string>
</resources>