<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo"
            android:gravity="top"
            android:lineSpacingExtra="-15dp"
            android:text="@string/cool_this_subject_is_interesting"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/baloo"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="-5dp"
            android:text="@string/here_you_can_see_the_made_comments_on_this_subject"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/baloo"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="-5dp"
            android:text="@string/use_the_starts_to_valuate_a_comment"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="-5dp"
            android:text="@string/to_send_stickers_is_easy"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="-5dp"
            android:text="@string/to_report_an_user_you_just_need"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/small_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom">

            <TextView
                android:id="@+id/skipTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="7dp"
                android:gravity="bottom"
                android:text="@string/skip_tutorial"
                android:textColor="@color/white"
                android:textStyle="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end">

            <TextView
                android:id="@+id/nextStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="10dp"
                android:padding="10dp"
                android:text="@string/next_step"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>