<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="25dp"
    android:elevation="@dimen/elevation1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_primary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_notifications"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/subtitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disable_notifications_explanation"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/subtitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_accent"
                android:text="@string/cancel"
                android:fontFamily="@font/baloo"
                android:textColor="@color/black"
                android:textSize="@dimen/big_text"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textSize="@dimen/big_text"
                android:fontFamily="@font/baloo"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
