<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:elevation="@dimen/elevation1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="5dp"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_white"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/baloo"
                    android:gravity="center"
                    android:text="@string/report_user"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/subtitle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:fontFamily="@font/baloo"
                    android:gravity="center"
                    android:text="@string/what_reason"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:src="@mipmap/logo2" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/reason1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/do_no_agree"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/small_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/reason2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/personal_attacks"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/small_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/reason3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/bad_behave"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/small_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/reason4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/out_of_subject"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/small_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/reason5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/other"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/small_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="5dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_report"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/rounded_grey"
                android:fontFamily="@font/baloo"
                android:hint="@string/tell_us_more"
                android:lineSpacingExtra="-7dp"
                android:padding="5dp"
                android:textSize="@dimen/small_text" />

            <Button
                android:id="@+id/report_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="8"
                android:background="@drawable/rounded_accent"
                android:fontFamily="@font/baloo"
                android:text="@string/report"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/very_small_text"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
