<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/elevation1"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_primary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/delete_account"
            android:textColor="@color/black"
            android:textSize="@dimen/subtitle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/text_spacing"
            android:text="@string/delete_account_explanation"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/subtitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancelBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_accent"
                android:fontFamily="@font/baloo"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/big_text" />

            <TextView
                android:id="@+id/deleteBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="@dimen/big_text" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>